--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "emoji-picker-react": "^4.15.2",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
+    "quill-blot-formatter": "^1.0.5",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
