--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@paper-design/shaders-react": "latest",
     "@radix-ui/react-accordion": "1.2.2",
@@ -54,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "19.2.0",
